--- a/.config
+++ b/.config
@@ -41,7 +41,7 @@ CONFIG_TARGET_ar71xx=y
 # CONFIG_TARGET_uml is not set
 # CONFIG_TARGET_x86 is not set
 CONFIG_TARGET_ar71xx_generic=y
-# CONFIG_TARGET_ar71xx_tiny=y
+CONFIG_TARGET_ar71xx_tiny=y
 # CONFIG_TARGET_ar71xx_nand is not set
 # CONFIG_TARGET_ar71xx_mikrotik is not set
 CONFIG_TARGET_MULTI_PROFILE=y
