--- a/.github/workflows/build-openwrt-tiny.yml
+++ b/.github/workflows/build-openwrt-tiny.yml
@@ -106,7 +106,8 @@ jobs:
         cd openwrt
         echo -e "$(nproc) thread compile"
         make -j$(nproc) || make -j1 || make -j1 V=s
-        echo "::set-output name=status::success"
+        echo "status=success" >> $GITHUB_OUTPUT
+        echo "${{ steps.compile.outputs.status }}"
         echo "OpenWrt-ath79-tiny" > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
         echo "FILE_DATE=_$(date +"%Y%m%d%H%M")" >> $GITHUB_ENV
