--- a/.github/workflows/build-openwrt-generic.yml
+++ b/.github/workflows/build-openwrt-generic.yml
@@ -8,7 +8,7 @@
 # Description: Build OpenWrt using GitHub Actions
 #
 
-name: Build OpenWrt Tiny
+name: Build OpenWrt Generic
 
 on:
   repository_dispatch:
